# hzp_md

./: .gitignore  Azure编译SDK.md  ESL_pubmsg.txt  Fabric.md  OpenWrt之Failsafe模式.md  OpenWrt之cron.md  OpenWrt之patch.md  OpenWrt之常用软件模块.md  OpenWrt之时区设置详解.md  OpenWrt固件生成过程.md  OpenWrt挂载U盘.md  OpenWrt的启动流程.md  OpenWrt系统内核设置以及非UCI的配置的系统配置.md  README.md  URCU哈希表API.txt  U盘SD卡自动挂载.md  _OpenWrt之patch.md  _OpenWrt系统内核设置以及非UCI的配置的系统配置.md  _使用SD卡或优盘来扩展openwrt的存储.md  cgi.md  etc_config.md  freeradius安装记录.md  frp内网穿透.md  gdbserver远程调试.md  gdb常用命令.md  nginx搭建文件服务器.md  stwd1000_硬件看门狗.txt  uci_c_api.md  临时备忘录.txt  修改记录.txt  小笔记.txt  工作记录.txt  控制外设GPIO口.md  搭建mosquitto以及添加ssl.md  搭建mqtt服务器以及添加ssl.md
Makefile/: CMakeLists.txt  Main_Makefile_note  Makefile  Makefile_note
Makefile/Generic/: Makefile_Generic
c/: c.md  getopt和getopt_long函数.md  linux字符串分割strtok_r.md
copy/: MQTT communication-v.0.2.0.md  OpenWrt UCI 学习笔记.txt  add-new-device-to-openwrt.md  patch in openwrt.txt  修改记录.txt  修改记录.txt.bak  网关补充.md
django/: Django实践.md
dts/: demo.dts
git/: _git添加ssh秘钥.md  git_config_扩展.md  git_基本常用命令.md  gitflow.md  git内部原理.md  git血泪史.md
github action/: github action基础.md  github action触发方式.md
lua/: Lua01-介绍安装、运行Lua程序.md  Lua02-基本语法.md  Lua03-数据类型.md  Lua04-循环、流程控制与函数.md  Lua05-运算符、字符串与数组.md  Lua06-迭代器、table、模块与包.md  Lua07-元表、协同与文件IO.md  Lua08-错误处理、调试与垃圾回收.md  Lua09-面向对象与数据库访问.md
openwrt/: OpenWrt之DHCP(动态主机配置协议).md  OpenWrt之DNS域名解析系统.md  OpenWrt之Failsafe模式.md  OpenWrt之LED的控制.md  OpenWrt之cron.md  OpenWrt之dnsmasq工具(DHCP、TFTP、DNS缓存服务器).md  OpenWrt之iptables防火墙.md  OpenWrt之patch.md  OpenWrt之主机系统.md  OpenWrt之网络基础知识.md  OpenWrt之网络网络配置文件解析.md  OpenWrt之网络配置文件(基于新三mt7621).md  OpenWrt之网络配置文件解析.md  OpenWrt之配置无线中继(基于新三mt7621).md  OpenWrt常用软件模块之CWMP.md  OpenWrt常用软件模块之NTP(date).md  OpenWrt常用软件模块之PPPoE.md  OpenWrt常用软件模块之QOS.md  OpenWrt常用软件模块之SMTP.md  OpenWrt常用软件模块之SSH(Dropbear).md  OpenWrt常用软件模块之Uhttpd.md  OpenWrt挂载U盘.md  OpenWrt的启动流程.md  OpenWrt系统内核设置以及非UCI的配置的系统配置.md  OpenWrt路由器基础软件模块之libubox.md  OpenWrt路由器基础软件模块之netifd.md  OpenWrt路由器基础软件模块之procd.md  OpenWrt路由器基础软件模块之ubox.md  OpenWrt路由器基础软件模块之ubus.md  Openwrt使用mtd和sysupgrade刷机、备份恢复系统配置.md  Thingoo.dts.txt  U盘SD卡自动挂载.md  add new device to openwrt.md  cgi.md  demo.dts.txt  etc_config.md  frp内网穿透.md  (+12 more)
(+12 files in other folders)
